--- a/.github/workflows/sync_to_private.yml
+++ b/.github/workflows/sync_to_private.yml
@@ -23,11 +23,13 @@ jobs:
           cd /tmp/private-repo
           git config user.name "Sync Bot"
           git config user.email "sync-bot@yourdomain.example"
-          git checkout -b sync-from-shared-$(date +%s)
+          BRANCH_NAME="sync-from-shared-$(date +%s)"
+          echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+          git checkout -b "$BRANCH_NAME"
           git add .
           # Only commit if there are changes
           if ! git diff --staged --quiet; then
-            git commit -m "Sync from shared repo at $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+            git commit -m "Sync from shared repo at $(date -u +'%Y-%m-%d %H:%M:%S')"
             git push --set-upstream origin HEAD
           else
             echo "No changes to create PR"
@@ -42,7 +44,7 @@ jobs:
           committer: "Sync Bot <sync-bot@yourdomain.example>"
           author: "Sync Bot <sync-bot@yourdomain.example>"
           base: main
-          branch: ${{ steps.push.outputs.ref || 'sync-from-shared' }}
+          branch: ${{ steps.sync.outputs.branch_name }}
           title: "Sync from shared repository"
           body: |
             This PR was automatically created to sync content from the shared repository.
