--- a/.github/workflows/sync_to_private.yml
+++ b/.github/workflows/sync_to_private.yml
@@ -2,7 +2,6 @@ name: Sync Shared → Private (Create PR)
 on:
   push:
     branches: [ main ]
-
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -12,38 +11,32 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Clone private repo
+      
+      - name: Checkout private repo
+        uses: actions/checkout@v4
+        with:
+          repository: iliadna/Test-Private
+          token: ${{ secrets.SYNC_TOKEN }}
+          path: private-repo
+      
+      - name: Sync content
         run: |
-          git clone https://x-access-token:${{ secrets.SYNC_TOKEN }}@github.com/iliadna/Test-Private.git /tmp/private-repo
-
-      - name: Rsync content to private clone
-        id: sync-content
-        run: |
-          rsync -av --delete --exclude='.git' --exclude ".github" "$GITHUB_WORKSPACE/" /tmp/private-repo/
-          cd /tmp/private-repo
-          git config user.name "Sync Bot"
-          git config user.email "sync-bot@yourdomain.example"
-          git add .
-          # Only commit if there are changes
-          if git diff --staged --quiet; then
-            echo "No changes to create PR"
-            exit 0
-          fi
-          BRANCH_NAME="sync-from-shared-$(date +%s)"
-          git checkout -b "$BRANCH_NAME"
-          git commit -m "Sync from shared repo at $(date -u +'%Y-%m-%d %H:%M:%S')"
-          git push --set-upstream origin "$BRANCH_NAME"
-          echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
-
+          rsync -av --delete --exclude='.git' --exclude='.github' "$GITHUB_WORKSPACE/" private-repo/
+      
       - name: Create Pull Request
-        run: |
-          BRANCH_NAME="${{ steps.sync-content.outputs.branch_name }}"
-          gh pr create \
-            --base main \
-            --head "$BRANCH_NAME" \
-            --title "Sync from shared repository" \
-            --body "This PR was automatically created to sync content from the shared repository." \
-            --repo "iliadna/Test-Private"
-        env:
-          GH_TOKEN: ${{ secrets.SYNC_TOKEN }}
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.SYNC_TOKEN }}
+          commit-message: "Sync from shared repo at $(date -u +'%Y-%m-%d %H:%M:%S')"
+          committer: "Sync Bot <sync-bot@yourdomain.example>"
+          author: "Sync Bot <sync-bot@yourdomain.example>"
+          base: main
+          branch: sync-from-shared-$(date +%s)
+          title: "Sync from shared repository"
+          body: |
+            This PR was automatically created to sync content from the shared repository.
+            
+            - **Sync Source:** ${{ github.repository }}@${{ github.sha }}
+            - **Sync Time:** $(date -u +'%Y-%m-%d %H:%M:%S UTC')
+          path: private-repo
+          delete-branch: true
